# xeltec_lms

./: .env.example  .gitignore  README.md  check_services.py  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  course_generation_agent.py
app/api/: __init__.py  course_editor_controller.py  course_generator_controller.py
app/db/: __init__.py  course_repository.py  draft_repository.py  job_repository.py  nosql_client.py
app/queue/: __init__.py  redis_queue.py
app/schemas/: __init__.py  course_schema.py  editor_schema.py  job_schema.py  request_schema.py
app/services/: __init__.py  assessment_service.py  async_generation_service.py  cost_tracker.py  file_storage_service.py  image_generation_service.py  outline_service.py  slide_content_service.py  tts_service.py
app/utils/: __init__.py  duration.py  validators.py
app/worker/: course_worker.py
docs/: UI_API_CONTRACT.md
ui/: README_UI.md  package-lock.json  package.json
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/components/: Layout.tsx  query-provider.tsx
ui/src/components/course/: GeneratorForm.tsx  JobProgressPanel.tsx
ui/src/components/ui/: accordion.tsx  label.tsx  progress.tsx  tabs.tsx  toast.tsx  toaster.tsx  use-toast.ts
ui/src/hooks/: useCourseEditor.ts  useDirtyState.ts
ui/src/pages/: CourseDetail.tsx  Courses.tsx  Generator.tsx
