[project]
name = "ai-course-generator"
version = "2.0.0"
description = "AI-powered LMS Course Generator Backend - Generates full LMS-ready courses with deterministic, constraint-driven content"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.6.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
